# bxyz-invite

./: Cargo.toml  README.md
content/pages/: index.html
content/styles/: default.css  user.css
src/: cli.rs  database_debug.rs  event_db.rs  main.rs
src/templates/: mod.rs
templates/: manage_event.html  sample_invitation.html  thanks.html  withdraw_invitation.html
