[package]
name = "bxyz-invite"
version = "0.1.0"
edition = "2021"
authors = [ "Blacepos" ]

[[bin]]
name = "bxyz-invite"
path = "src/main.rs"

[[bin]]
name = "database-debug"
path = "src/database_debug.rs"

[dependencies]
clap = { version = "*", features = ["derive"] }
flexi_logger = { version = "*" }
log = { version = "*" }
tokio = { version = "*", features = ["full"] }
axum = { version = "*" }
tower = { version = "*" }
tower-http = { version = "*", features = ["trace", "fs"] }
slot = { path = "../slot" }
serde = { version = "*", features = ["derive"] }
serde_cbor = "*"
rand = "*"
base62 = "*"
askama = "*"
tera = "*"